@@ -28,7 +28,9 @@ namespace CrissCross
         class UDPSocket : public CoreSocket
         {
         private:
+
             int SetAttributes ( socket_t _socket );
+
         public:
             //! The constructor.
             UDPSocket ();
